competencia4/proyecto_postgres18/ExprParser.py
# Generated from ./Expr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'='", "'<>'", 
                     "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'/'", 
                     "'*'", "'.'", "';'", "','", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "CREATE", "TABLE", "DROP", "INSERT", 
                      "INTO", "VALUES", "SELECT", "FROM", "WHERE", "UPDATE", 
                      "SET", "DELETE", "PRIMARY", "KEY", "FOREIGN", "REFERENCES", 
                      "CONSTRAINT", "NOT", "NULL", "UNIQUE", "DEFAULT", 
                      "INNER", "LEFT", "RIGHT", "JOIN", "ON", "AS", "ORDER", 
                      "BY", "ASC", "DESC", "LIMIT", "OFFSET", "AND", "OR", 
                      "IS", "IN", "BETWEEN", "LIKE", "TRUE", "FALSE", "INDEX", 
                      "VIEW", "GROUP", "HAVING", "BEGIN", "START", "TRANSACTION", 
                      "COMMIT", "ROLLBACK", "PROCEDURE", "REPLACE", "LANGUAGE", 
                      "TRIGGER", "BEFORE", "AFTER", "ROW", "EXECUTE", "FUNCTION", 
                      "FOR", "EACH", "SERIAL", "INTEGER", "BIGINT", "SMALLINT", 
                      "NUMERIC", "REAL", "BOOLEAN", "VARCHAR", "CHAR", "TEXT", 
                      "DATE", "TIME", "TIMESTAMP", "BYTEA", "JSON", "JSONB", 
                      "UUID", "IGUAL", "DIFERENTE", "MENOR", "MAYOR", "MENOR_IGUAL", 
                      "MAYOR_IGUAL", "MAS", "MENOS", "DIV", "ASTERISCO", 
                      "PUNTO", "PUNTO_COMA", "COMA", "PAR_IZQ", "PAR_DER", 
                      "DECIMAL", "NUM", "CADENA", "ID", "COMENTARIO", "COMENTARIO_BLOQUE", 
                      "WS" ]

    RULE_root = 0
    RULE_expr = 1
    RULE_transaccion = 2
    RULE_crearTabla = 3
    RULE_listaElementosTabla = 4
    RULE_elementoTabla = 5
    RULE_definirColumna = 6
    RULE_restriccionColumna = 7
    RULE_restriccionTabla = 8
    RULE_restriccionEspecifica = 9
    RULE_tipoDato = 10
    RULE_insertarDatos = 11
    RULE_listaIds = 12
    RULE_listaValores = 13
    RULE_valor = 14
    RULE_consultaSelect = 15
    RULE_listaSeleccion = 16
    RULE_itemSeleccion = 17
    RULE_origen = 18
    RULE_alias = 19
    RULE_condicionWhere = 20
    RULE_agrupamiento = 21
    RULE_condicion = 22
    RULE_expresion = 23
    RULE_operadorComparacion = 24
    RULE_ordenamiento = 25
    RULE_itemOrden = 26
    RULE_limite = 27
    RULE_actualizarDatos = 28
    RULE_listaAsignaciones = 29
    RULE_asignacion = 30
    RULE_eliminarDatos = 31
    RULE_crearIndice = 32
    RULE_crearVista = 33
    RULE_eliminarTabla = 34
    RULE_nombreTabla = 35
    RULE_crearProcedimiento = 36
    RULE_crearTrigger = 37

    ruleNames =  [ "root", "expr", "transaccion", "crearTabla", "listaElementosTabla", 
                   "elementoTabla", "definirColumna", "restriccionColumna", 
                   "restriccionTabla", "restriccionEspecifica", "tipoDato", 
                   "insertarDatos", "listaIds", "listaValores", "valor", 
                   "consultaSelect", "listaSeleccion", "itemSeleccion", 
                   "origen", "alias", "condicionWhere", "agrupamiento", 
                   "condicion", "expresion", "operadorComparacion", "ordenamiento", 
                   "itemOrden", "limite", "actualizarDatos", "listaAsignaciones", 
                   "asignacion", "eliminarDatos", "crearIndice", "crearVista", 
                   "eliminarTabla", "nombreTabla", "crearProcedimiento", 
                   "crearTrigger" ]

    EOF = Token.EOF
    CREATE=1
    TABLE=2
    DROP=3
    INSERT=4
    INTO=5
    VALUES=6
    SELECT=7
    FROM=8
    WHERE=9
    UPDATE=10
    SET=11
    DELETE=12
    PRIMARY=13
    KEY=14
    FOREIGN=15
    REFERENCES=16
    CONSTRAINT=17
    NOT=18
    NULL=19
    UNIQUE=20
    DEFAULT=21
    INNER=22
    LEFT=23
    RIGHT=24
    JOIN=25
    ON=26
    AS=27
    ORDER=28
    BY=29
    ASC=30
    DESC=31
    LIMIT=32
    OFFSET=33
    AND=34
    OR=35
    IS=36
    IN=37
    BETWEEN=38
    LIKE=39
    TRUE=40
    FALSE=41
    INDEX=42
    VIEW=43
    GROUP=44
    HAVING=45
    BEGIN=46
    START=47
    TRANSACTION=48
    COMMIT=49
    ROLLBACK=50
    PROCEDURE=51
    REPLACE=52
    LANGUAGE=53
    TRIGGER=54
    BEFORE=55
    AFTER=56
    ROW=57
    EXECUTE=58
    FUNCTION=59
    FOR=60
    EACH=61
    SERIAL=62
    INTEGER=63
    BIGINT=64
    SMALLINT=65
    NUMERIC=66
    REAL=67
    BOOLEAN=68
    VARCHAR=69
    CHAR=70
    TEXT=71
    DATE=72
    TIME=73
    TIMESTAMP=74
    BYTEA=75
    JSON=76
    JSONB=77
    UUID=78
    IGUAL=79
    DIFERENTE=80
    MENOR=81
    MAYOR=82
    MENOR_IGUAL=83
    MAYOR_IGUAL=84
    MAS=85
    MENOS=86
    DIV=87
    ASTERISCO=88
    PUNTO=89
    PUNTO_COMA=90
    COMA=91
    PAR_IZQ=92
    PAR_DER=93
    DECIMAL=94
    NUM=95
    CADENA=96
    ID=97
    COMENTARIO=98
    COMENTARIO_BLOQUE=99
    WS=100

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)




    def root(self):

        localctx = ExprParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.expr()
            self.state = 77
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def crearTabla(self):
            return self.getTypedRuleContext(ExprParser.CrearTablaContext,0)


        def insertarDatos(self):
            return self.getTypedRuleContext(ExprParser.InsertarDatosContext,0)


        def consultaSelect(self):
            return self.getTypedRuleContext(ExprParser.ConsultaSelectContext,0)


        def actualizarDatos(self):
            return self.getTypedRuleContext(ExprParser.ActualizarDatosContext,0)


        def eliminarDatos(self):
            return self.getTypedRuleContext(ExprParser.EliminarDatosContext,0)


        def crearIndice(self):
            return self.getTypedRuleContext(ExprParser.CrearIndiceContext,0)


        def crearVista(self):
            return self.getTypedRuleContext(ExprParser.CrearVistaContext,0)


        def eliminarTabla(self):
            return self.getTypedRuleContext(ExprParser.EliminarTablaContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = ExprParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.crearTabla()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.insertarDatos()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.consultaSelect()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.actualizarDatos()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.eliminarDatos()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.crearIndice()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 85
                self.crearVista()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 86
                self.eliminarTabla()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransaccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUNTO_COMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.PUNTO_COMA)
            else:
                return self.getToken(ExprParser.PUNTO_COMA, i)

        def COMMIT(self):
            return self.getToken(ExprParser.COMMIT, 0)

        def ROLLBACK(self):
            return self.getToken(ExprParser.ROLLBACK, 0)

        def BEGIN(self):
            return self.getToken(ExprParser.BEGIN, 0)

        def START(self):
            return self.getToken(ExprParser.START, 0)

        def TRANSACTION(self):
            return self.getToken(ExprParser.TRANSACTION, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_transaccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransaccion" ):
                listener.enterTransaccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransaccion" ):
                listener.exitTransaccion(self)




    def transaccion(self):

        localctx = ExprParser.TransaccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_transaccion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [46]:
                self.state = 89
                self.match(ExprParser.BEGIN)
                pass
            elif token in [47]:
                self.state = 90
                self.match(ExprParser.START)
                self.state = 91
                self.match(ExprParser.TRANSACTION)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 94
            self.match(ExprParser.PUNTO_COMA)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 5274) != 0):
                self.state = 95
                self.expr()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            _la = self._input.LA(1)
            if not(_la==49 or _la==50):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 102
            self.match(ExprParser.PUNTO_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CrearTablaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(ExprParser.CREATE, 0)

        def TABLE(self):
            return self.getToken(ExprParser.TABLE, 0)

        def nombreTabla(self):
            return self.getTypedRuleContext(ExprParser.NombreTablaContext,0)


        def PAR_IZQ(self):
            return self.getToken(ExprParser.PAR_IZQ, 0)

        def listaElementosTabla(self):
            return self.getTypedRuleContext(ExprParser.ListaElementosTablaContext,0)


        def PAR_DER(self):
            return self.getToken(ExprParser.PAR_DER, 0)

        def PUNTO_COMA(self):
            return self.getToken(ExprParser.PUNTO_COMA, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_crearTabla

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCrearTabla" ):
                listener.enterCrearTabla(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCrearTabla" ):
                listener.exitCrearTabla(self)




    def crearTabla(self):

        localctx = ExprParser.CrearTablaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_crearTabla)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(ExprParser.CREATE)
            self.state = 105
            self.match(ExprParser.TABLE)
            self.state = 106
            self.nombreTabla()
            self.state = 107
            self.match(ExprParser.PAR_IZQ)
            self.state = 108
            self.listaElementosTabla()
            self.state = 109
            self.match(ExprParser.PAR_DER)
            self.state = 110
            self.match(ExprParser.PUNTO_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaElementosTablaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elementoTabla(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ElementoTablaContext)
            else:
                return self.getTypedRuleContext(ExprParser.ElementoTablaContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMA)
            else:
                return self.getToken(ExprParser.COMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_listaElementosTabla

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaElementosTabla" ):
                listener.enterListaElementosTabla(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaElementosTabla" ):
                listener.exitListaElementosTabla(self)




    def listaElementosTabla(self):

        localctx = ExprParser.ListaElementosTablaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listaElementosTabla)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.elementoTabla()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==91:
                self.state = 113
                self.match(ExprParser.COMA)
                self.state = 114
                self.elementoTabla()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementoTablaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definirColumna(self):
            return self.getTypedRuleContext(ExprParser.DefinirColumnaContext,0)


        def restriccionTabla(self):
            return self.getTypedRuleContext(ExprParser.RestriccionTablaContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_elementoTabla

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElementoTabla" ):
                listener.enterElementoTabla(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElementoTabla" ):
                listener.exitElementoTabla(self)




    def elementoTabla(self):

        localctx = ExprParser.ElementoTablaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_elementoTabla)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [97]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.definirColumna()
                pass
            elif token in [13, 15, 17, 20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.restriccionTabla()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinirColumnaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def tipoDato(self):
            return self.getTypedRuleContext(ExprParser.TipoDatoContext,0)


        def restriccionColumna(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.RestriccionColumnaContext)
            else:
                return self.getTypedRuleContext(ExprParser.RestriccionColumnaContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_definirColumna

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinirColumna" ):
                listener.enterDefinirColumna(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinirColumna" ):
                listener.exitDefinirColumna(self)




    def definirColumna(self):

        localctx = ExprParser.DefinirColumnaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_definirColumna)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(ExprParser.ID)
            self.state = 125
            self.tipoDato()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3481600) != 0):
                self.state = 126
                self.restriccionColumna()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RestriccionColumnaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRIMARY(self):
            return self.getToken(ExprParser.PRIMARY, 0)

        def KEY(self):
            return self.getToken(ExprParser.KEY, 0)

        def NOT(self):
            return self.getToken(ExprParser.NOT, 0)

        def NULL(self):
            return self.getToken(ExprParser.NULL, 0)

        def UNIQUE(self):
            return self.getToken(ExprParser.UNIQUE, 0)

        def DEFAULT(self):
            return self.getToken(ExprParser.DEFAULT, 0)

        def valor(self):
            return self.getTypedRuleContext(ExprParser.ValorContext,0)


        def REFERENCES(self):
            return self.getToken(ExprParser.REFERENCES, 0)

        def nombreTabla(self):
            return self.getTypedRuleContext(ExprParser.NombreTablaContext,0)


        def PAR_IZQ(self):
            return self.getToken(ExprParser.PAR_IZQ, 0)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def PAR_DER(self):
            return self.getToken(ExprParser.PAR_DER, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_restriccionColumna

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRestriccionColumna" ):
                listener.enterRestriccionColumna(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRestriccionColumna" ):
                listener.exitRestriccionColumna(self)




    def restriccionColumna(self):
